# guardian

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md  SECURITY.md  codecov.yml  docker-compose.postgres.yml  docker-compose.yml
.github/: dependabot.yml
audits/: README.md
benchmarks/prod-server/: .env.example  Cargo.toml  README.md
benchmarks/prod-server/profiles/: ecdsa-burst-scale.toml  ecdsa-mixed-burst-scale.toml  falcon-ecdsa-mixed-burst-scale.toml  falcon-mixed-burst-scale.toml
benchmarks/prod-server/src/: artifacts.rs  aws_cli.rs  cleanup.rs  cleanup_manifest.rs  cli.rs  client_factory.rs  config.rs  distributed.rs  error_classification.rs  lib.rs  main.rs  model.rs  operations.rs  preflight.rs  report.rs  run.rs  runner.rs  schemes.rs  seed.rs  workload.rs
benchmarks/prod-server/tests/: distributed.rs  foundations.rs  run_report.rs  workload.rs
crates/client/: Cargo.toml  README.md  build.rs
crates/client/examples/: e2e_with_keystore.rs
crates/client/proto/: state_manager.proto
crates/client/src/: auth.rs  client.rs  error.rs  lib.rs  signature.rs  transaction.rs
crates/client/src/auth/: miden_ecdsa.rs  miden_falcon_rpo.rs  mod.rs
crates/client/src/keystore/: ecdsa.rs  falcon.rs  mod.rs  signer.rs  verification.rs
crates/client/src/testing/: client_tests.rs  mocks.rs  mod.rs
crates/contracts/: Cargo.toml  README.md  build.rs
crates/contracts/masm/account_components/auth/: multisig_guardian.masm  multisig_guardian_ecdsa.masm  multisig_psm.masm  multisig_psm_ecdsa.masm
crates/contracts/masm/auth/: guardian_ecdsa.masm  multisig.masm  multisig_ecdsa.masm  psm.masm
crates/contracts/src/: lib.rs  masm_builder.rs  multisig_guardian.rs  multisig_psm.rs
crates/contracts/tests/: lib.rs
crates/contracts/tests/auth/: multisig.rs
crates/contracts/tests/examples/: multisig.rs
crates/miden-multisig-client/: Cargo.toml  README.md
crates/miden-multisig-client/examples/: procedure_roots.rs
crates/miden-multisig-client/src/: account.rs  builder.rs  config.rs  error.rs  execution.rs  export.rs  keystore.rs  lib.rs  payload.rs  procedures.rs  proposal.rs  psm_endpoint.rs  utils.rs
crates/miden-multisig-client/src/client/: account.rs  helpers.rs  io.rs  mod.rs  notes.rs  offline.rs  proposals.rs
crates/miden-multisig-client/src/transaction/: builder.rs  consume.rs  mod.rs  payment.rs
crates/miden-multisig-client/src/transaction/configuration/: config.rs  mod.rs
crates/miden-multisig-client/tests/: p2id_serial_vectors.rs
crates/miden-rpc-client/: Cargo.toml  README.md
crates/miden-rpc-client/src/: lib.rs
crates/server/: Cargo.toml  README.md  build.rs  test-e2e.sh
crates/server/bench/: README.md
crates/server/bench/loadgen/src/: scenarios.rs
crates/server/bench/scripts/: collect_pg_metrics.sh  run_postgres.sh
crates/server/proto/: state_manager.proto
crates/server/src/: builder.rs  canonicalization.rs  config.rs  delta_object.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/ack/: mod.rs  secrets_manager.rs
crates/server/src/ack/miden_ecdsa/: signer.rs
crates/server/src/ack/miden_falcon_rpo/: keystore.rs  mod.rs  signer.rs
crates/server/src/api/: grpc.rs  http.rs
crates/server/src/auth/: miden_falcon_rpo.rs  mod.rs
crates/server/src/builder/: canonicalization.rs  clock.rs  handle.rs  mod.rs  storage.rs
crates/server/src/grpc/: mod.rs
crates/server/src/http/: mod.rs
crates/server/src/jobs/: canonicalize_deltas.rs  mod.rs
crates/server/src/jobs/canonicalization/: mod.rs  processor.rs  worker.rs
crates/server/src/metadata/: file_store.rs  filesystem.rs  mod.rs  postgres.rs
crates/server/src/metadata/auth/: credentials.rs  miden_ecdsa.rs  miden_falcon_rpo.rs  mod.rs
crates/server/src/middleware/: body_limit.rs  mod.rs  rate_limit.rs
crates/server/src/network/: miden.rs  mod.rs
crates/server/src/network/miden/: account_inspector.rs  mod.rs
crates/server/src/services/: canonicalize.rs  configure_account.rs  configure_auth.rs  delta_commit.rs  get_delta.rs  get_delta_head.rs  get_delta_proposal.rs  get_delta_proposals.rs  get_delta_since.rs  get_state.rs  mod.rs  push_delta.rs  push_delta_proposal.rs  sign_delta_proposal.rs
crates/server/src/services/canonicalization/: processor.rs
crates/server/src/signing/: mod.rs
crates/server/src/signing/miden_falcon_rpo/: keystore.rs  signer.rs
crates/server/src/storage/: filesystem.rs  mod.rs  postgres.rs
crates/server/src/testing/: generate_fixtures.rs  helpers.rs  mocks.rs
crates/server/src/testing/e2e/: configure_account.rs  delta_proposals.rs  mod.rs  psm_signature.rs
crates/server/src/testing/fixtures/: account.json  commitments.json  delta_1.json  delta_2.json  delta_3.json  keys.json  mod.rs  multisig-psm.masm  proposal_1.json  proposal_2.json  proposal_signed.json
crates/server/src/testing/integration/: auth_grpc.rs  auth_http.rs  body_limit_http.rs  keystore.rs  miden_rpc_integration.rs  mod.rs  proposals_grpc.rs  proposals_http.rs  rate_limit_http.rs
crates/server/src/utils/: commitment.rs  mod.rs
crates/server/tests/: canonicalization_lifecycle_test.rs  e2e_grpc_auth_test.rs  e2e_http_auth_test.rs  generate_fixtures.rs  miden_rpc_integration_test.rs  test-reproducibility.sh  utils.rs
crates/server/tests/fixtures/: delta.json
crates/shared/: Cargo.toml  README.md
crates/shared/src/: auth.rs  auth_request_message.rs  auth_request_payload.rs  hex.rs  lib.rs
docs/: MULTISIG_SDK.md  (+1 more)
examples/demo/: Cargo.toml  README.md
examples/demo/src/: display.rs  helpers.rs  main.rs  menu.rs  multisig.rs  proposals.rs  state.rs
examples/demo/src/actions/: add_cosigner.rs  configure_psm.rs  create_account.rs  finalize_pending_transaction.rs  generate_keypair.rs  list_notes.rs  mod.rs  proposal_management.rs  pull_deltas_from_psm.rs  pull_from_psm.rs  show_account.rs  show_status.rs  sign_transaction.rs  sync_account.rs  verify_state_commitment.rs  view_proposals.rs
examples/rust/: Cargo.toml
examples/rust/src/: falcon.rs  main.rs  miden.rs  miden_helpers.rs  multisig.rs
(+128 files in other folders)
