[package]
name = "guardian-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for Guardian"
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
guardian-shared = { version = "=0.14.4", path = "../shared" }
miden-protocol = { version = "=0.14.3" }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
miden-rpc-client = { path = "../miden-rpc-client" }
miden-keystore = { path = "../miden-keystore" }
miden-standards = { version = "=0.14.3" }
rand_chacha = { workspace = true }
tempfile = { workspace = true }
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = { workspace = true }
