[package]
name = "miden-multisig-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level SDK for interacting with multisig accounts on Miden via GUARDIAN"

[dependencies]
# Internal crates
guardian-client = { version = "=0.14.4", path = "../client" }
guardian-shared = { version = "=0.14.4", path = "../shared" }
miden-confidential-contracts = { version = "=0.14.4", path = "../contracts" }

# Miden
miden-client = { version = "=0.14.3", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "=0.14.3" }
miden-protocol = { version = "=0.14.3" }
miden-tx = { version = "=0.14.3" }
miden-standards = { version = "=0.14.3" }

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
