[package]
name = "miden-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-objects = "0.11.4"
miden-node-proto = "0.11.2"
tonic = { version = "0.13", features = ["tls-native-roots", "tls-ring", "transport"] }
tokio = { version = "1.47", features = ["rt-multi-thread"] }
hex = "0.4"
