[package]
name = "guardian-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8.6"
base64 = { workspace = true }
chrono = "0.4"
hex = { workspace = true }
rand = "0.9"
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-reflection = "0.14"
prost = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
miden-protocol = { workspace = true, features = ["testing"] }
futures-util = { version = "0.3", optional = true }
rustls = { version = "0.23", optional = true }
tokio-postgres = { version = "0.7.10", optional = true }
tokio-postgres-rustls = { version = "0.12.0", optional = true }

# internal crates
guardian-shared = { path = "../shared" }
miden-keystore = { path = "../miden-keystore" }
miden-rpc-client = { path = "../miden-rpc-client" }

# Postgres storage
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json"], optional = true }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"], optional = true }
diesel_migrations = { version = "2.2", optional = true }

# Optional dependencies for e2e tests
miden-client = { workspace = true, features = ["testing"], optional = true }
miden-confidential-contracts = { path = "../contracts", optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
miden-standards = { workspace = true }

[features]
default = []
postgres = [
    "diesel",
    "diesel-async",
    "diesel_migrations",
    "futures-util",
    "rustls",
    "tokio-postgres",
    "tokio-postgres-rustls",
]
integration = []
e2e = ["miden-client", "miden-confidential-contracts"]
