[package]
name = "private-state-manager-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types and utilities for Private State Manager"

[dependencies]
miden-objects = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
hex = { workspace = true }

[dev-dependencies]
miden-lib = { workspace = true }
