[package]
name = "guardian-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types and utilities for Guardian"

[dependencies]
miden-protocol = { version = "=0.14.3" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
hex = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
miden-standards = { version = "=0.14.3" }
